--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.topBar{
+  top: 10px;
+}
+
+.bottomBar{
+  bottom: 100px;
+  position:absolute
+}
